--- a/modulo2-angular/1. Hola Mundo/src/app/app.component.html
+++ b/modulo2-angular/1. Hola Mundo/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Nombre: {{ nombre }}</h1>
-<h2>Apellido: {{ apellido }}</h2>
+<app-header></app-header>
+
+<app-body></app-body>
+
+<app-footer></app-footer>
